# llm-usecases

./: README.md  pyproject.toml
company_summarizer/: company_summarizer.ipynb
function_calling/: function_calling.ipynb
